syntax = "proto3";

package protocol;

message IpcRequest {
  // Message identifier.
  uint64 message_id = 1;
  // Request body.
  IpcRequestBody body = 2;
}

message IpcRequestBody {
  oneof inner {
    VoidBody authenticated = 1;
  }
}

message VoidBody {}

message IpcResponse {
  // Message identifier.
  uint64 message_id = 1;
  // Message body.
  IpcResponseBody body = 2;
}

message IpcResponseBody {
  oneof inner {
    AccountList authenticated = 1;
  }
}

message AccountList {
  repeated AccountAuthenticatedState accounts = 1;
}

message AccountAuthenticatedState {
  // Account address identifier.
  string address = 1;
  // Authenticated state.
  bool authenticated = 2;
}
