syntax = "proto3";

package request;

import "protobuf/common.proto";

// IPC request packet.
message WireIpcRequest {
  // Message identifier.
  uint64 message_id = 1;
  // Request body.
  WireIpcRequestBody body = 2;
}

// IPC request body.
message WireIpcRequestBody {
  // Inner values.
  oneof inner {

    // Query app status.
    common.WireVoidBody status = 1;

    // Ping the server.
    common.WireVoidBody ping = 2;

    // Request to open a program.
    WireOpenUrlBody open_url = 3;

    // Request a list of accounts.
    common.WireVoidBody list_accounts = 4;

    // Request to authenticate to an account.
    WireAuthenticateBody authenticate  = 5;

    // Request to lock an account.
    WireLockBody lock  = 6;
  }
}

// Request body to open a URL.
message WireOpenUrlBody {
  // URL to open.
  string url = 1;
}

// Authenticate request body.
message WireAuthenticateBody {
  // Account address.
  string address = 1;
}

// Lock request body.
message WireLockBody {
  // Account address.
  optional string address = 1;
}
